--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,25 @@
 BeautifulSoup==3.2.1
 Django==1.6.1
-LBForum==0.9.22
+Markdown==2.4
 Pillow==2.3.0
 South==0.8.4
 Werkzeug==0.9.4
+bbcode==1.0.15
 django-admin-bootstrapped==1.6.3
 django-allauth==0.15.0
+django-annoying==0.7.9
 django-autoslug==1.7.2
 django-crispy-forms==1.4.0
 django-debug-toolbar==1.0.1
 django-extensions==1.3.2
 django-guardian==1.1.1
 django-helper==0.8.4
-django-lb-attachments==0.8.3
-django-onlineuser==0.8.7
-django-pagination==1.0.7
-django-simple-avatar==0.8.6
-oauthlib==0.6.0
-postmarkup==1.2.0
+oauthlib==0.6.1
+psycopg2==2.5.2
+-e git+git@github.com:jeffknupp/pybbm.git@6c710618161162a27027869fc1fada20652464cc#egg=pybbm-master
 python-openid==2.2.5
-requests==2.2.0
+requests==2.2.1
 requests-oauthlib==0.4.0
-six==1.5.2
-sqlparse==0.1.10
+six==1.6.1
+sqlparse==0.1.11
 wsgiref==0.1.2
