--- a/requirements.txt
+++ b/requirements.txt
@@ -5,21 +5,27 @@ Pillow==2.3.0
 South==0.8.4
 Werkzeug==0.9.4
 bbcode==1.0.15
+dj-stripe==0.3.2
 django-admin-bootstrapped==1.6.3
 django-allauth==0.15.0
 django-annoying==0.7.9
 django-autoslug==1.7.2
+django-braces==1.4.0
 django-crispy-forms==1.4.0
 django-debug-toolbar==1.0.1
 django-extensions==1.3.2
 django-guardian==1.1.1
 django-helper==0.8.4
+django-jsonfield==0.9.12
+django-model-utils==2.0.3
 oauthlib==0.6.1
 psycopg2==2.5.2
--e git+git@github.com:jeffknupp/pybbm.git@6c710618161162a27027869fc1fada20652464cc#egg=pybbm-master
+-e git+git@github.com:jeffknupp/pybbm.git@61adbfff7adab2ae1721d1a8f523ed79d3987317#egg=pybbm-master
 python-openid==2.2.5
 requests==2.2.1
 requests-oauthlib==0.4.0
 six==1.6.1
+sorl-thumbnail==11.12
 sqlparse==0.1.11
+stripe==1.12.2
 wsgiref==0.1.2
